-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.9.0 Beta3, 6.10
-
None
-
-
426fa3fc0 (dev), de5c78663 (tqtc/lts-6.8)
MacOS 15.3.1
Qt Creator 15.0.1
Qt 6.9.0b3
Steps to reproduce:
- Run the graph gallery example.
- Switch to surface graph
- Select column slice in graph selection mode
- Select textured typography as a model
- Click on the graph (use also right-click to move the graph)
Expected: The app should not crash
Actual: The app crashes. See the attached video. Crash report attached.
- relates to
-
QTQAINFRA-6991
Qt Test Attack - 02, 2025
-
- Open
-
-
QTBUG-139568 Graph Gallery- App crashes when Clicking on Surface graph
-
- Closed
-