Check if slice pointer exists when updating selected point

Also set all selection and slice selection pointers visibility to false at start.

Fixes: QTBUG-133921
Change-Id: Ie86c2d7142de9ed08a364595ada601e4cbdbf814
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>